<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_mars_desc">Save photos &amp; videos to a private storage space in Google Photos on your device</string>
    <string name="about_mars_desc_2">You can find Locked Folder in Google Photos in the Library tab</string>
    <string name="about_mars_title">Hide sensitive photos &amp; videos</string>
    <string name="accessibility_amber_start">Start cinematic blur</string>
    <string name="accessibility_amber_stop">Stop cinematic blur</string>
    <string name="accessibility_autotimer_start">Start auto-timer</string>
    <string name="accessibility_autotimer_stop">Stop auto-timer</string>
    <string name="accessibility_back_to_video_description">Back to normal video mode</string>
    <string name="accessibility_cancel_button">Cancel photo</string>
    <string name="accessibility_capture_imax_start">Start panorama</string>
    <string name="accessibility_capture_imax_stop">Stop panorama</string>
    <string name="accessibility_capture_video_start">Start video</string>
    <string name="accessibility_capture_video_stop">Stop video</string>
    <string name="accessibility_cheetah_video_start">Start time lapse</string>
    <string name="accessibility_cheetah_video_stop">Stop time lapse</string>
    <string name="accessibility_close_button">Close</string>
    <string name="accessibility_close_social_share">Close social share</string>
    <string name="accessibility_done_button">Done</string>
    <string name="accessibility_elapsed_recording_time_description">Recording time %1$s</string>
    <string name="accessibility_filmstrip_toggle">Photo gallery</string>
    <string name="accessibility_hfr_record_speed_desc">Slow Motion %1$d/%2$dx speed</string>
    <string name="accessibility_hfr_video_start">Start slow motion</string>
    <string name="accessibility_hfr_video_stop">Stop slow motion</string>
    <string name="accessibility_imax_backtracking">Move in original direction</string>
    <string name="accessibility_imax_too_fast">Slow down</string>
    <string name="accessibility_imax_too_much_roll">Hold phone straight</string>
    <string name="accessibility_longshot_capture">Take quick video</string>
    <string name="accessibility_open_social_share">Open social share</string>
    <string name="accessibility_processing_the_photo">Processing the photo</string>
    <string name="accessibility_shutter_button">Shutter</string>
    <string name="accessibility_speech_enhance_indicator">Speech enhancement on</string>
    <string name="accessibility_take_catshark_portrait_button">Take Night Sight in Portrait</string>
    <string name="accessibility_take_lasagna_button">Take Motion mode photo</string>
    <string name="accessibility_take_nightsight_button">Take Night Sight photo</string>
    <string name="accessibility_take_photo_button">Take photo</string>
    <string name="accessibility_take_photosphere_button">Take photosphere</string>
    <string name="accessibility_take_portrait_button">Take portrait</string>
    <string name="accessibility_timelapse_auto_record_speed_desc">Time Lapse auto speed</string>
    <string name="faceretouch_on_light_acc_desc">Face retouching subtle</string>
    <string name="faceretouch_on_strong_acc_desc">Face retouching smooth</string>
    <string name="frequent_faces_info">"When you take Top Shot photos or touch and hold for Top Shot, Frequent Faces prioritizes the people you photograph most.

This helps your camera show skin tones more accurately and recommend the best photos.

Frequent Faces data is only saved on this device, and can only be accessed by this Camera app. 

When you turn off Frequent Faces, faces data will be deleted.

Frequent Faces will be available when you open Camera from the lock screen. 

Frequent Faces won’t be available when saving photos and videos to Locked Folder."</string>
    <string name="manual_controls">Manual Controls</string>
    <string name="micro_auto_desc">Top Shot auto</string>
    <string name="micro_on_desc">Top Shot on</string>
    <string name="mode_video">Video</string>
    <string name="options_menu_button_desc">Open options menu</string>
    <string name="options_menu_gear_desc">Camera Settings</string>
    <string name="photo">Photo</string>
    <string name="pref_audio_zoom_summary">Zooming in on subject boosts sound and reduces background noise</string>
    <string name="pref_audio_zoom_title">Audio zoom</string>
    <string name="pref_camera_anglerfish_summary">Remove reflection from eyeglasses lens</string>
    <string name="pref_camera_anglerfish_title">Glare removal</string>
    <string name="pref_camera_coach_summary">On-screen tips and tools, like levelers and focus tips</string>
    <string name="pref_camera_coach_title">Framing hints</string>
    <string name="pref_camera_custom_hotkeys_summary">Select hotkeys to control camera actions.</string>
    <string name="pref_camera_custom_hotkeys_title">Custom Hotkeys</string>
    <string name="pref_camera_dirty_lens_summary">Display warning when the lens may be too dirty to take high-quality pictures. Wiping off the lens may help.</string>
    <string name="pref_camera_dirty_lens_title">Show dirty lens warning</string>
    <string name="pref_camera_double_tap_action_title">Double-tap action</string>
    <string name="pref_camera_frequent_faces_title">Frequent Faces</string>
    <string name="pref_camera_gestures_title">Gestures</string>
    <string name="pref_camera_lens_subtitle_legacy">Point your camera to scan QR codes, documents, and more</string>
    <string name="pref_camera_lens_title">Google Lens suggestions</string>
    <string name="pref_camera_mirror_image_title">Save selfie as previewed</string>
    <string name="pref_camera_picturesize_default">Full resolution</string>
    <string name="pref_camera_save_location_summary">Other apps may be able to view photo &amp; video location info</string>
    <string name="pref_camera_save_location_title">Save location</string>
    <string name="pref_camera_selfie_mirror_image_summary">Save selfie photos as they appear in the viewer</string>
    <string name="pref_camera_shutter_command_title">Shutter</string>
    <string name="pref_camera_social_share_main_feature_switch">Use Social share</string>
    <string name="pref_camera_social_share_summary">Quickly share photos and videos on social apps from Camera</string>
    <string name="pref_camera_social_share_title">Social share</string>
    <string name="pref_camera_sounds_title">Camera sounds</string>
    <string name="pref_camera_switch_camera_command_title">Switch Camera</string>
    <string name="pref_camera_switch_to_next_mode_command_title">Switch to Next Mode</string>
    <string name="pref_camera_switch_to_previous_mode_command_title">Switch to Previous Mode</string>
    <string name="pref_camera_volume_key_action_title">Volume key action</string>
    <string name="pref_camera_zoom_in_command_title">Zoom In</string>
    <string name="pref_camera_zoom_out_command_title">Zoom Out</string>
    <string name="pref_category_advanced">Advanced</string>
    <string name="pref_category_storage">Device storage</string>
    <string name="pref_countdown_indicator_summary">Flashes the back camera light during the timer countdown.</string>
    <string name="pref_countdown_indicator_title">Timer light</string>
    <string name="pref_depth_every_photo_summary">Depth data will be saved. This data may be used by social media apps. Top Shot will be turned off and photos may take longer to process.</string>
    <string name="pref_depth_every_photo_title">Social media depth features</string>
    <string name="pref_developer_settings">Developer Settings</string>
    <string name="pref_enable_auto_macro_summary">Camera uses Macro Focus automatically when taking photos at a close range</string>
    <string name="pref_enable_auto_macro_title">Auto Macro</string>
    <string name="pref_exposure_control">Exposure</string>
    <string name="pref_exposure_control_summary">Adjust brightness and shadows</string>
    <string name="pref_free_up_space">Free up space</string>
    <string name="pref_free_up_space_summary">Clean up storage on this device. This will take you to Files app.</string>
    <string name="pref_hdr_plus_control_summary">Show manual control for HDR+. When this setting is off, HDR+ stays on all the time.</string>
    <string name="pref_hdr_plus_control_title">HDR+ control</string>
    <string name="pref_hevc_control_summary">Use H.265/HEVC format instead of H.264/AVC for a smaller file size. HEVC may not be supported on some platforms.</string>
    <string name="pref_hotshot">Guided Frame</string>
    <string name="pref_hotshot_summary">Take selfies with the help of audio and vibrations</string>
    <string name="pref_low_storage_mode">Storage Saver</string>
    <string name="pref_low_storage_mode_auto_disable">Turn off when storage is available</string>
    <string name="pref_low_storage_mode_summary">To optimize storage space, Storage Saver will change settings that use large amounts of storage. This may reduce image or video quality.</string>
    <string name="pref_raw_output_control_summary">Show option to turn on RAW+JPEG in the viewer. The RAW (DNG) file is saved separately, along with identifiable camera data, in a device folder in Google Photos. Uses additional storage.</string>
    <string name="pref_raw_output_control_title">RAW+JPEG control</string>
    <string name="pref_video_hevc">Store videos efficiently</string>
    <string name="pref_video_stabilization">Video stabilization</string>
    <string name="pref_video_stabilization_summary">Reduce camera shake to make videos smoother. Will result in a zoomed-in view.</string>
    <string name="pref_white_balance_control">White balance</string>
    <string name="pref_white_balance_control_summary">Adjust color temperature</string>
    <string name="preference_double_tap_zoom">zoom</string>
    <string name="preference_volume_key_shutter">shutter</string>
    <string name="setting_camera_photo">Camera photo resolution</string>
    <string name="setting_composition">Composition</string>
    <string name="setting_general">General</string>
    <string name="setting_google_feedback">Send feedback</string>
    <string name="setting_google_help">Help</string>
    <string name="setting_google_help_and_feedback">Help &amp; feedback</string>
    <string name="setting_grid_mode">Grid type</string>
    <string name="translate_tooltip_body">Translate text instantly or get info about things you see</string>
    <string name="translate_tooltip_title">Live Translate and more</string>
    <string name="translate_tooltip_try_it">Try it</string>
</resources>