<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    android:orderingFromXml="true"
    android:key="prefscreen_top"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/setting_general"
        android:key="pref_category_general">
        <com.google.android.apps.camera.ui.preference.MaterialManagedSwitchPreference
            android:icon="@drawable/quantum_gm_ic_room_vd_theme_24"
            android:title="@string/pref_camera_save_location_title"
            android:key="pref_camera_recordlocation_key"
            android:summary="@string/pref_camera_save_location_summary"
            android:order="0" />
        <com.google.android.apps.camera.ui.preference.MaterialManagedSwitchPreference
            android:icon="@drawable/quantum_gm_ic_volume_up_vd_theme_24"
            android:title="@string/pref_camera_sounds_title"
            android:key="pref_camera_sounds_key"
            android:order="1" />
        <com.google.android.apps.camera.ui.preference.MaterialManagedSwitchPreference
            android:icon="@drawable/quantum_ic_google_lens_new_vd_theme_24"
            android:title="@string/pref_camera_lens_title"
            android:key="pref_camera_enable_iris"
            android:summary="@string/pref_camera_lens_subtitle_legacy"
            android:order="2" />
        <PreferenceScreen
            android:icon="@drawable/quantum_gm_ic_share_vd_theme_24"
            android:title="@string/pref_camera_social_share_title"
            android:key="pref_category_social_share"
            android:summary="@string/pref_camera_social_share_summary"
            android:order="6">
            <com.android.settingslib.widget.TopIntroPreference
                android:key="key_social_share_top_intro" />
            <com.google.android.apps.camera.ui.preference.MaterialManagedMainSwitchPreference
                android:title="@string/pref_camera_social_share_main_feature_switch"
                android:key="key_social_share_opt_in" />
        </PreferenceScreen>
        <PreferenceScreen
            android:icon="@drawable/quantum_gm_ic_touch_app_vd_theme_24"
            android:title="@string/pref_camera_gestures_title"
            android:key="pref_category_gestures"
            android:summary="@string/pref_camera_volume_key_action_title"
            android:order="7">
            <ListPreference
                android:entries="@array/pref_volume_action_entries"
                android:title="@string/pref_camera_volume_key_action_title"
                android:key="pref_volume_key_action"
                android:summary="%s"
                android:defaultValue="@string/preference_volume_key_shutter"
                android:entryValues="@array/pref_volume_action_entryvalues" />
            <ListPreference
                android:entries="@array/pref_double_tap_action_entries"
                android:title="@string/pref_camera_double_tap_action_title"
                android:key="pref_double_tap_key"
                android:summary="%s"
                android:defaultValue="@string/preference_double_tap_zoom"
                android:entryValues="@array/pref_double_tap_entryvalues" />
            <PreferenceScreen
                android:icon="@drawable/quantum_gm_ic_more_horiz_vd_theme_24"
                android:layout="@layout/preference_with_margin"
                android:title="@string/pref_camera_custom_hotkeys_title"
                android:key="pref_category_custom_hotkeys"
                android:summary="@string/pref_camera_custom_hotkeys_summary">
                <com.google.android.apps.camera.ui.preference.MaterialKeyListenerPreference
                    android:layout="@layout/preference_with_margin"
                    android:title="@string/pref_camera_shutter_command_title"
                    android:key="pref_shutter_command_string" />
                <com.google.android.apps.camera.ui.preference.MaterialKeyListenerPreference
                    android:layout="@layout/preference_with_margin"
                    android:title="@string/pref_camera_zoom_in_command_title"
                    android:key="pref_zoom_in_command_string" />
                <com.google.android.apps.camera.ui.preference.MaterialKeyListenerPreference
                    android:layout="@layout/preference_with_margin"
                    android:title="@string/pref_camera_zoom_out_command_title"
                    android:key="pref_zoom_out_command_string" />
                <com.google.android.apps.camera.ui.preference.MaterialKeyListenerPreference
                    android:layout="@layout/preference_with_margin"
                    android:title="@string/pref_camera_switch_camera_command_title"
                    android:key="pref_switch_camera_command_string" />
                <com.google.android.apps.camera.ui.preference.MaterialKeyListenerPreference
                    android:layout="@layout/preference_with_margin"
                    android:title="@string/pref_camera_switch_to_next_mode_command_title"
                    android:key="pref_switch_to_next_mode_command_string" />
                <com.google.android.apps.camera.ui.preference.MaterialKeyListenerPreference
                    android:layout="@layout/preference_with_margin"
                    android:title="@string/pref_camera_switch_to_previous_mode_command_title"
                    android:key="pref_switch_to_previous_mode_command_string" />
            </PreferenceScreen>
        </PreferenceScreen>
        <PreferenceScreen
            android:icon="@drawable/quantum_gm_ic_face_vd_theme_24"
            android:title="@string/pref_camera_frequent_faces_title"
            android:key="pref_category_frequent_faces"
            android:order="8">
            <com.google.android.apps.camera.ui.preference.MaterialManagedSwitchPreference
                android:icon="@drawable/quantum_gm_ic_face_vd_theme_24"
                android:layout="@layout/preference_with_action_button"
                android:key="key_ff_opt_in"
                android:summary="@string/frequent_faces_info" />
        </PreferenceScreen>
        <PreferenceScreen
            android:icon="@drawable/quantum_gm_ic_sd_storage_vd_theme_24"
            android:title="@string/pref_category_storage"
            android:key="pref_category_storage"
            android:order="9">
            <com.google.android.apps.camera.ui.preference.MaterialStorageStatusPreference
                android:layout="@layout/material_preference_storage_status"
                android:key="pref_storage_status" />
            <com.google.android.apps.camera.ui.preference.MaterialManagedSwitchPreference
                android:icon="@drawable/quantum_gm_ic_sim_card_vd_theme_24"
                android:layout="@layout/preference_with_expand_button"
                android:title="@string/pref_low_storage_mode"
                android:key="pref_storage_saver"
                android:summary="@string/pref_low_storage_mode_summary" />
            <com.google.android.apps.camera.ui.preference.MaterialManagedSwitchPreference
                android:layout="@layout/preference_with_no_icon"
                android:title="@string/pref_low_storage_mode_auto_disable"
                android:key="pref_storage_saver_auto_disable" />
            <Preference
                android:icon="@drawable/quantum_gm_ic_sd_storage_vd_theme_24"
                android:layout="@layout/preference_with_margin"
                android:title="@string/pref_free_up_space"
                android:key="pref_free_up_space"
                android:summary="@string/pref_free_up_space_summary" />
        </PreferenceScreen>
        <com.google.android.apps.camera.ui.preference.MaterialManagedSwitchPreference
            android:icon="@drawable/ic_hotshot_24dp"
            android:title="@string/pref_hotshot"
            android:key="pref_hotshot_key"
            android:summary="@string/pref_hotshot_summary"
            android:order="10" />
        <PreferenceScreen
            android:icon="@drawable/quantum_gm_ic_more_horiz_vd_theme_24"
            android:title="@string/pref_category_advanced"
            android:key="pref_category_advanced"
            android:order="255">
            <com.google.android.apps.camera.ui.preference.MaterialManagedSwitchPreference
                android:icon="@drawable/quantum_gm_ic_dirty_lens_vd_theme_24"
                android:title="@string/pref_camera_dirty_lens_title"
                android:key="pref_dirty_lens_detector_key"
                android:summary="@string/pref_camera_dirty_lens_summary" />
            <com.google.android.apps.camera.ui.preference.MaterialManagedSwitchPreference
                android:icon="@drawable/quantum_gm_ic_hdr_plus_vd_theme_24"
                android:title="@string/pref_hdr_plus_control_title"
                android:key="pref_camera_hdrplus_option_available_key"
                android:summary="@string/pref_hdr_plus_control_summary" />
            <com.google.android.apps.camera.ui.preference.MaterialManagedSwitchPreference
                android:icon="@drawable/ic_raw_on_gm2_grey_24px"
                android:layout="@layout/preference_with_action_button"
                android:title="@string/pref_raw_output_control_title"
                android:key="pref_camera_raw_output_option_available_key"
                android:summary="@string/pref_raw_output_control_summary" />
            <com.google.android.apps.camera.ui.preference.MaterialManagedSwitchPreference
                android:icon="@drawable/ic_hevc_gm2_24px"
                android:title="@string/pref_video_hevc"
                android:key="pref_video_hevc_setting_key"
                android:summary="@string/pref_hevc_control_summary" />
            <com.google.android.apps.camera.ui.preference.MaterialManagedSwitchPreference
                android:icon="@drawable/quantum_gm_ic_layers_vd_theme_24"
                android:title="@string/pref_depth_every_photo_title"
                android:key="pref_camera_dynamic_depth_enabled_key"
                android:summary="@string/pref_depth_every_photo_summary" />
            <com.google.android.apps.camera.ui.preference.MaterialManagedSwitchPreference
                android:icon="@drawable/quantum_gm_ic_auto_awesome_vd_theme_24"
                android:title=""
                android:key="pref_camera_kepler_enabled_key"
                android:summary="" />
            <com.google.android.apps.camera.ui.preference.MaterialManagedSwitchPreference
                android:icon="@drawable/quantum_gm_ic_highlight_vd_theme_24"
                android:title="@string/pref_countdown_indicator_title"
                android:key="pref_camera_cd_indicator_enabled_key"
                android:summary="@string/pref_countdown_indicator_summary" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/setting_composition"
        android:key="pref_category_composition">
        <com.google.android.apps.camera.ui.preference.MaterialManagedSwitchPreference
            android:icon="@drawable/quantum_ic_aspect_ratio_vd_theme_24"
            android:title="@string/pref_camera_coach_title"
            android:key="pref_camera_coach_key"
            android:summary="@string/pref_camera_coach_summary"
            android:order="3" />
        <com.google.android.apps.camera.ui.preference.MaterialManagedSwitchPreference
            android:icon="@drawable/ic_taxi"
            android:layout="@layout/preference_with_helper_button"
            android:title="@string/pref_enable_auto_macro_title"
            android:key="pref_enable_auto_taxi_key"
            android:summary="@string/pref_enable_auto_macro_summary"
            android:order="4" />
        <ListPreference
            android:icon="@drawable/quantum_gm_ic_grid_on_vd_theme_24"
            android:entries="@array/pref_grid_mode_entries"
            android:title="@string/setting_grid_mode"
            android:key="pref_camera_grid_lines_mode"
            android:summary="%s"
            android:order="8"
            android:defaultValue="0"
            android:entryValues="@array/pref_grid_mode_entryvalues" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/manual_controls"
        android:key="pref_category_manual_controls">
        <com.google.android.apps.camera.ui.preference.MaterialManagedSwitchPreference
            android:icon="@drawable/quantum_gm_ic_thermostat_vd_theme_24"
            android:layout="@layout/preference_with_helper_button"
            android:title="@string/pref_white_balance_control"
            android:key="pref_chameleon_control_key"
            android:summary="@string/pref_white_balance_control_summary"
            android:order="1"
            android:defaultValue="true" />
        <com.google.android.apps.camera.ui.preference.MaterialManagedSwitchPreference
            android:icon="@drawable/quantum_gm_ic_brightness_medium_vd_theme_24"
            android:title="@string/pref_exposure_control"
            android:key="pref_exposure_control_key"
            android:summary="@string/pref_exposure_control_summary"
            android:order="2" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/photo"
        android:key="pref_category_resolution_camera">
        <com.google.android.apps.camera.ui.preference.MaterialBlockableListPreference
            android:icon="@drawable/quantum_gm_ic_photo_camera_vd_theme_24"
            android:entries="@array/pref_camera_picturesize_entries"
            android:layout="@layout/preference_with_margin"
            android:title="@string/setting_camera_photo"
            android:key="pref_camera_resolution"
            android:summary="%s"
            android:order="1"
            android:defaultValue="@string/pref_camera_picturesize_default"
            android:entryValues="@array/pref_camera_picturesize_entryvalues" />
        <com.google.android.apps.camera.ui.preference.MaterialManagedSwitchPreference
            android:icon="@drawable/quantum_gm_ic_camera_front_vd_theme_24"
            android:title="@string/pref_camera_mirror_image_title"
            android:key="pref_camera_selfie_mirror_key"
            android:summary="@string/pref_camera_selfie_mirror_image_summary"
            android:order="2" />
        <com.google.android.apps.camera.ui.preference.MaterialManagedSwitchPreference
            android:icon="@drawable/quantum_gm_ic_camera_front_vd_theme_24"
            android:title="@string/pref_camera_anglerfish_title"
            android:key="pref_anglerfish_enabled_key"
            android:summary="@string/pref_camera_anglerfish_summary"
            android:order="3" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/mode_video"
        android:key="pref_category_resolution_video">
        <com.google.android.apps.camera.ui.preference.MaterialManagedSwitchPreference
            android:icon="@drawable/quantum_gm_ic_video_stable_vd_theme_24"
            android:title="@string/pref_video_stabilization"
            android:key="pref_video_stabilization_key"
            android:summary="@string/pref_video_stabilization_summary"
            android:order="1" />
        <com.google.android.apps.camera.ui.preference.MaterialManagedSwitchPreference
            android:icon="@drawable/quantum_gm_ic_surround_sound_vd_theme_24"
            android:title="@string/pref_audio_zoom_title"
            android:key="pref_audio_zoom_key"
            android:summary="@string/pref_audio_zoom_summary"
            android:order="2" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/setting_google_help_and_feedback"
        android:key="pref_category_help_and_feedback">
        <Preference
            android:icon="@drawable/quantum_gm_ic_feedback_vd_theme_24"
            android:title="@string/setting_google_feedback"
            android:key="pref_launch_feedback" />
        <Preference
            android:icon="@drawable/quantum_gm_ic_help_outline_vd_theme_24"
            android:title="@string/setting_google_help"
            android:key="pref_launch_help" />
        <PreferenceScreen
            android:icon="@drawable/quantum_gm_ic_developer_mode_vd_theme_24"
            android:title="@string/pref_developer_settings"
            android:key="pref_category_developer" />
    </PreferenceCategory>
</PreferenceScreen>