<?xml version="1.0" encoding="utf-8"?>
<com.google.android.apps.camera.optionsbar.view.LinearMinibarImpl
    android:orientation="horizontal"
    android:id="@id/minibar"
    android:background="@drawable/minibar_background"
    android:paddingLeft="8.0dip"
    android:paddingTop="6.0dip"
    android:paddingRight="2.0dip"
    android:paddingBottom="6.0dip"
    android:clickable="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.widget.AppCompatImageView
        android:id="@id/minibar_item_ext1"
        android:visibility="gone"
        android:layout_width="@dimen/minibar_item_size"
        android:layout_height="@dimen/minibar_item_size"
        style="@style/minibar_item_style" />
    <android.support.v7.widget.AppCompatImageView
        android:id="@id/minibar_item_ext2"
        android:visibility="gone"
        android:layout_width="@dimen/minibar_item_size"
        android:layout_height="@dimen/minibar_item_size"
        style="@style/minibar_item_style" />
    <android.support.v7.widget.AppCompatImageView
        android:id="@id/minibar_item_ext3"
        android:visibility="gone"
        android:layout_width="@dimen/minibar_item_size"
        android:layout_height="@dimen/minibar_item_size"
        style="@style/minibar_item_style" />
    <android.support.v7.widget.AppCompatImageView
        android:id="@id/minibar_item_ext4"
        android:visibility="gone"
        android:layout_width="@dimen/minibar_item_size"
        android:layout_height="@dimen/minibar_item_size"
        style="@style/minibar_item_style" />
    <android.support.v7.widget.AppCompatImageView
        android:id="@id/minibar_item_motion_on_always"
        android:layout_width="@dimen/minibar_item_size"
        android:layout_height="@dimen/minibar_item_size"
        android:src="@drawable/ic_motion_recording"
        android:contentDescription="@string/micro_on_desc"
        style="@style/minibar_item_style" />
    <android.support.v7.widget.AppCompatImageView
        android:id="@id/minibar_item_motion_on_auto"
        android:layout_width="@dimen/minibar_item_size"
        android:layout_height="@dimen/minibar_item_size"
        android:src="@drawable/quantum_gm_ic_motion_photos_auto_white_24"
        android:contentDescription="@string/micro_auto_desc"
        style="@style/minibar_item_style" />
    <android.support.v7.widget.AppCompatImageView
        android:id="@id/minibar_item_face_strong"
        android:layout_width="@dimen/minibar_item_size"
        android:layout_height="@dimen/minibar_item_size"
        android:src="@drawable/ic_faceretouch_on_strong"
        android:contentDescription="@string/faceretouch_on_strong_acc_desc"
        style="@style/minibar_item_style" />
    <android.support.v7.widget.AppCompatImageView
        android:id="@id/minibar_item_face_light"
        android:layout_width="@dimen/minibar_item_size"
        android:layout_height="@dimen/minibar_item_size"
        android:src="@drawable/ic_faceretouch_on_light"
        android:contentDescription="@string/faceretouch_on_light_acc_desc"
        style="@style/minibar_item_style" />
    <android.support.v7.widget.AppCompatImageView
        android:id="@id/minibar_item_gear"
        android:visibility="gone"
        android:layout_width="@dimen/minibar_item_size"
        android:layout_height="@dimen/minibar_item_size"
        android:layout_marginRight="6.0dip"
        android:src="@drawable/quantum_gm_ic_settings_white_24"
        android:scaleType="fitCenter"
        android:tint="?colorOnSurfaceVariant"
        android:contentDescription="@string/options_menu_gear_desc" />
    <android.support.v7.widget.AppCompatImageView
        android:id="@id/minibar_item_chevron"
        android:padding="3.0dip"
        android:layout_width="@dimen/minibar_item_size"
        android:layout_height="@dimen/minibar_item_size"
        android:layout_marginRight="6.0dip"
        android:src="@drawable/options_menu_arrow_icon"
        android:scaleType="fitCenter"
        android:tint="?colorOnSurfaceVariant"
        android:contentDescription="@string/options_menu_button_desc" />
</com.google.android.apps.camera.optionsbar.view.LinearMinibarImpl>